--- a/qr-attendance-app/package.json
+++ b/qr-attendance-app/package.json
@@ -16,16 +16,18 @@
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "dayjs": "^1.11.18",
-    "expo": "^54.0.7",
+    "expo": "54.0.23",
     "expo-camera": "^17.0.9",
+    "expo-face-detector": "^13.0.2",
+    "expo-file-system": "~19.0.17",
     "expo-status-bar": "~3.0.8",
     "nativewind": "^4.1.23",
     "react": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-gifted-chat": "^2.6.3",
     "react-native-qrcode-svg": "^6.3.20",
-    "react-native-reanimated": "~4.1.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.12.1",
@@ -36,9 +38,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
+    "@types/react": "~19.1.10",
     "babel-preset-expo": "^54.0.1",
-    "typescript": "~5.8.3"
+    "typescript": "~5.9.2"
   },
   "private": true
 }
